# dday

./: README.md  pyproject.toml
src/dday/: dday.py
tests/: test_dday.py
